<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imgboton"
    tools:context="com.example.bolivar.magic8ballx.ConfigurationActivity">

    <TextView
        android:id="@+id/textDesactivarsonido"
        android:layout_width="121dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:textSize="30sp"
        android:text="@string/desactivarsound_text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDesactivarsensor"
        android:layout_width="118dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/desactivarsensor_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDesactivarsonido" />

    <ToggleButton
        android:id="@+id/toggleButton_desactivarsonido"
        android:layout_width="104dp"
        android:soundEffectsEnabled="false"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="60dp"
        android:background="@color/morado"
        android:text="ToggleButton"
        android:textOff="@string/desactivado"
        android:textOn="@string/activado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textDesactivarsonido"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton_desactivarsensor"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="64dp"
        android:background="@color/morado"
        android:soundEffectsEnabled="false"
        android:text="ToggleButton"
        android:textOff="@string/desactivado"
        android:textOn="@string/activado"
        app:layout_constraintBottom_toTopOf="@+id/textautor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textDesactivarsensor"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton_desactivarsonido" />

    <TextView
        android:id="@+id/textCreditos"
        android:layout_width="116dp"
        android:layout_height="44dp"
        android:layout_marginEnd="220dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/sobre_text"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDesactivarsensor" />

    <TextView
        android:id="@+id/textautor"
        android:layout_width="303dp"
        android:layout_height="41dp"
        android:layout_marginBottom="110dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/autor_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCreditos" />
</android.support.constraint.ConstraintLayout>
